# red-alert

./: .gitignore  Cargo.toml  README.md  red_alert_config.json  ru_RU.ftl
src/: commands.rs  commands_handler.rs  extended_voice_container.rs  guilds_voices_receivers.rs  guilds_voices_storage.rs  info_voice_container.rs  is_sub.rs  main.rs  queued_items_container.rs  recognition.rs  recognizer.rs  red_alert.rs  red_alert_commands_handler.rs  red_alert_handler.rs  red_alert_voice_config.rs  voice.rs  voice_config.rs  voice_receiver.rs  voices_storage.rs
src/components/: mod.rs
src/components/base/: mod.rs  queued_items_container.rs
src/components/discord_chat/: commands_handler.rs  mod.rs  print_text_command.rs
src/components/discord_voice/: guilds_voices_receivers.rs  mod.rs  voice_receiver.rs
src/components/localization/: mod.rs
src/components/voice/: mod.rs  recognition.rs  recognizer.rs
src/red_alert/: actions_history.rs  guilds_voice_config.rs  handler.rs  listen_actions.rs  mod.rs  monitoring_performer.rs  recognizer_performer.rs  voice_config.rs
src/red_alert/commands_handler/: actions_history_command.rs  guilds_voice_config_command.rs  help_command_factory.rs  mod.rs  on_ready.rs  start_listen_command.rs  stop_listen_command.rs  text_command.rs
