[package]
name = "red-alert"
version = "0.0.4"
edition = "2021"

[dependencies]
guard = "0.5.1"
voskrust = { git = "https://github.com/tikitko/voskrust.git" }
songbird = "0.2.2"
fon = "0.6.0"
serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "collector", "voice"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }